--- a/views/index.ejs
+++ b/views/index.ejs
@@ -68,7 +68,7 @@
                                     </div>                              
                                 </div>
                                 <button>
-                                    <a class="btn_a" href="/carrinho">
+                                    <a class="btn_a" href="/carrinho?idProd=<%=produto.id%>">
                                         <span class="material-icons-outlined">shopping_cart</span> Comprar
                                     </a>
                                 </button>
