--- a/public/stylesheets/produto.css
+++ b/public/stylesheets/produto.css
@@ -2,7 +2,7 @@ main div div .home-produto {
     display: flex;
     margin-top: 1%;
     margin-left: 1%;
-    justify-content: space-around;
+    justify-content: space-between;
     justify-items: flex-start;
     width: 13%;
     color: #333;
@@ -138,11 +138,12 @@ main div div .home-produto {
 
 }
 .paginaproduto div div .veja-tambem {
-    margin-left: 1%;
-    margin-top: 1%;
-    margin-bottom: 1%;
+
+    margin-top: 2%;
+    margin-bottom: 2%;
 
 }
+
 .paginaproduto div div .mais-produtos .produto {
     border-radius: 7px;
     box-shadow: 3px 2px 10px 4px #888;
@@ -150,11 +151,11 @@ main div div .home-produto {
     display: flex;
     flex-flow: column;
     justify-content: space-around;
+    margin: 1% 0% 4% 0%;
 
 }
 .paginaproduto div div .mais-produtos .produto .img-produto img{
-    width: 90%;
-    margin-left: 5%;
+    width: 200px;
     margin-bottom: 10%;
 
 
