--- a/views/produto.ejs
+++ b/views/produto.ejs
@@ -83,24 +83,47 @@
                 
                 </section>
                 <div class="veja-tambem">
-                    <p>Veja também!</p>
+                    <p style="text-align: center;">Veja também!</p>
                 </div>
                 <div class="mais-produtos">
                     <section class="produto">
                         <div class="img-produto">
-                            <img src="/images/<%=  %>" alt="">
+                            <img src="/images/produtos/<%= produto.img %>" alt="">
                         </div>
                         <div class="nome-produto">
-                            <p class="nome-produto"><%=  %></p>
+                            <p class="nome-produto"><%= produto.nome %></p>
                         </div>
                         <div class="valor-anterior">
-                            <p class="valor-anterior">De: R$<%=  %> por:</p>
+                            <p class="valor-anterior">De: <span style="text-decoration: line-through"> <%= produto.preco.toLocaleString('pt-br',{style: 'currency', currency: 'BRL'}) %> </span> </p>
                         </div>
                         <div class="valor-atual">
-                            <p class="valor-atual"> R$<%=  %> à vista </p>
+                            <p class="valor-atual"> <%= ((produto.preco / 10 ) * 9).toLocaleString('pt-br',{style: 'currency', currency: 'BRL'}) %> à vista </p>
                         </div>
                         <div class="valor-parcelado">
-                            <p class="valor-parcelado"> 12x de R$<%=  %> </p>
+                            <p class="valor-parcelado"> 12x de <%= (produto.preco / 12).toLocaleString('pt-br',{style: 'currency', currency: 'BRL'}) %> </p>
+                        </div>
+                        <button class="button-produto">
+                            <span class="material-icons-outlined" > shopping_cart</span>
+                            Comprar
+                        </button>
+
+
+                    </section>
+                    <!--<section class="produto">
+                        <div class="img-produto">
+                            <img src="/images/produtos/<%= produto.img %>" alt="">
+                        </div>
+                        <div class="nome-produto">
+                            <p class="nome-produto"><%= produto.nome %></p>
+                        </div>
+                        <div class="valor-anterior">
+                            <p class="valor-anterior">De: <span style="text-decoration: line-through"> <%= produto.preco.toLocaleString('pt-br',{style: 'currency', currency: 'BRL'}) %> </span> </p>
+                        </div>
+                        <div class="valor-atual">
+                            <p class="valor-atual"> <%= ((produto.preco / 10 ) * 9).toLocaleString('pt-br',{style: 'currency', currency: 'BRL'}) %> à vista </p>
+                        </div>
+                        <div class="valor-parcelado">
+                            <p class="valor-parcelado"> 12x de <%= (produto.preco / 12).toLocaleString('pt-br',{style: 'currency', currency: 'BRL'}) %> </p>
                         </div>
                         <button class="button-produto">
                             <span class="material-icons-outlined" > shopping_cart</span>
@@ -111,19 +134,19 @@
                     </section>
                     <section class="produto">
                         <div class="img-produto">
-                            <img src="/images/<%=  %>" alt="">
+                            <img src="/images/produtos/<%= produto.img %>" alt="">
                         </div>
                         <div class="nome-produto">
-                            <p class="nome-produto"><%=  %></p>
+                            <p class="nome-produto"><%= produto.nome %></p>
                         </div>
                         <div class="valor-anterior">
-                            <p class="valor-anterior">De: R$<%=  %> por:</p>
+                            <p class="valor-anterior">De: <span style="text-decoration: line-through"> <%= produto.preco.toLocaleString('pt-br',{style: 'currency', currency: 'BRL'}) %> </span> </p>
                         </div>
                         <div class="valor-atual">
-                            <p class="valor-atual"> R$<%=  %> à vista </p>
+                            <p class="valor-atual"> <%= ((produto.preco / 10 ) * 9).toLocaleString('pt-br',{style: 'currency', currency: 'BRL'}) %> à vista </p>
                         </div>
                         <div class="valor-parcelado">
-                            <p class="valor-parcelado"> 12x de R$<%=  %> </p>
+                            <p class="valor-parcelado"> 12x de <%= (produto.preco / 12).toLocaleString('pt-br',{style: 'currency', currency: 'BRL'}) %> </p>
                         </div>
                         <button class="button-produto">
                             <span class="material-icons-outlined" > shopping_cart</span>
@@ -134,19 +157,19 @@
                     </section>
                     <section class="produto">
                         <div class="img-produto">
-                            <img src="/images/<%=  %>" alt="">
+                            <img src="/images/produtos/<%= produto.img %> " alt="">
                         </div>
                         <div class="nome-produto">
-                            <p class="nome-produto"><%=  %></p>
+                            <p class="nome-produto"><%= produto.nome %></p>
                         </div>
                         <div class="valor-anterior">
-                            <p class="valor-anterior">De: R$<%=  %> por:</p>
+                            <p class="valor-anterior">De: <span style="text-decoration: line-through"> <%= produto.preco.toLocaleString('pt-br',{style: 'currency', currency: 'BRL'}) %> </span> </p>
                         </div>
                         <div class="valor-atual">
-                            <p class="valor-atual"> R$<%=  %> à vista </p>
+                            <p class="valor-atual"> <%= ((produto.preco / 10 ) * 9).toLocaleString('pt-br',{style: 'currency', currency: 'BRL'}) %> à vista </p>
                         </div>
                         <div class="valor-parcelado">
-                            <p class="valor-parcelado"> 12x de R$<%=  %> </p>
+                            <p class="valor-parcelado"> 12x de <%= (produto.preco / 12).toLocaleString('pt-br',{style: 'currency', currency: 'BRL'}) %> </p>
                         </div>
                         <button class="button-produto">
                             <span class="material-icons-outlined" > shopping_cart</span>
@@ -154,30 +177,7 @@
                         </button>
 
 
-                    </section>
-                    <section class="produto">
-                        <div class="img-produto">
-                            <img src="/images/<%= %> " alt="">
-                        </div>
-                        <div class="nome-produto">
-                            <p class="nome-produto"><%=  %></p>
-                        </div>
-                        <div class="valor-anterior">
-                            <p class="valor-anterior">De: R$<%=  %> por:</p>
-                        </div>
-                        <div class="valor-atual">
-                            <p class="valor-atual"> R$<%=  %> à vista </p>
-                        </div>
-                        <div class="valor-parcelado">
-                            <p class="valor-parcelado"> 12x de R$<%=  %> </p>
-                        </div>
-                        <button class="button-produto">
-                            <span class="material-icons-outlined" > shopping_cart</span>
-                            Comprar
-                        </button>
-
-
-                    </section>
+                    </section> -->
                 </div>
 
                 
