--- a/views/login.ejs
+++ b/views/login.ejs
@@ -45,12 +45,7 @@
                         
                     </p> 
 
-                <% } %>
-
-
-
-
-             
+                <% } %>             
 
                 <label for="email"> 
                     <span class="material-icons-outlined">email</span>
@@ -85,6 +80,17 @@
                     <input name="lembrarUsuario" type="checkbox" class="checkbox-lembrar" id="lembrarUsuario">
                     <label for="lembrarUsuario">Lembrar-se</label>
                 </div>
+
+                <% if(locals.linkCarrinho) { %> 
+                    <input type="hidden" name="linkCarrinho" value="<%= linkCarrinho %>">
+                <% } %> 
+
+                <% if(locals.dadosPreenchido) { %> 
+                    <input type="hidden" name="linkCarrinho" value="<%= dadosPreenchido.linkCarrinho %>">
+                <% } %> 
+
+                
+
 
                 <button class="botao-login-entrar" type="submit">Entrar</button>
                 <a class="botao-login-criar_conta" href="/usuario/cadastro">Criar Conta</a>
