--- a/public/stylesheets/carrinho.css
+++ b/public/stylesheets/carrinho.css
@@ -1,6 +1,59 @@
+/*** Carrinho Vazio **********************/
+    .div-carrinho-vazio {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .div-carrinho-vazio h1 {
+        font-size: 2rem;
+        text-transform: uppercase;
+        font-weight: bold;
+        color: #ccc;
+        margin-bottom: 30px;
+    }
+
+    .div-carrinho-vazio span {
+        font-size: 10rem;
+        color: #ccc;
+        margin-bottom: 40px;
+    }
+
+    .div-carrinho-vazio p {
+        font-size: 1.25rem;
+        text-align: center;
+        margin-bottom: 80px;
+        color: #333;
+        text-transform: uppercase;
+        line-height: 1.975rem;
+    }
+
+    .div-carrinho-vazio p a{
+        font-size: 1rem;
+        text-decoration: none;
+        padding: 10px;
+        border: 3px solid #d35400;
+        color: #d35400;
+        font-weight: bold;
+        border-radius: 7px;
+        transition: 0.6s;        
+    }
+
+    .div-carrinho-vazio p a:hover{
+        background-color: #d35400;
+        border: 3px solid #d35400;
+        color: #fff;                
+    }
+
+/*********************************************/
+
+
 .h1_carrinho
 {
     font-size: 20px;
+    color: #555;
+    text-align: center;
+    margin-bottom: 40px;
 }
 
 .div_Carrinho_Pai
