--- a/public/stylesheets/barra-progresso-pedido.css
+++ b/public/stylesheets/barra-progresso-pedido.css
@@ -5,7 +5,8 @@
     justify-content: space-around;
     width: 100%;
     list-style: none;
-    margin-bottom: 50px;
+    margin-top: -35px;
+    margin-bottom: 40px;
 }
 
 .ul-barra-progresso-pedido li {    
@@ -56,5 +57,16 @@
 .div-linha-progersso-concluido {
     border-bottom: 4px solid #8bc34a;
 }
+
+/*** @media ******************************/
+@media (min-width: 769px) {
+    .ul-barra-progresso-pedido {       
+        margin-top: 0px;
+        margin-bottom: 50px;
+    }
+}
+
+
+
 
 
